--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <!-- Subscrive Button -->
-<div style="width:100%; margin:0 auto;" class="g-ytsubscribe" data-channelid="UCMcqkxvaRHYSMn8RkLq_E-A" data-layout="full" data-count="default"></div>
+<div style="width:100%; margin:0 auto;">
+  <div class="g-ytsubscribe" data-channelid="UCMcqkxvaRHYSMn8RkLq_E-A" data-layout="full" data-count="default"></div>
+</div>
 
 <div class="posts">
   {% for post in site.posts %}
